--- a/ECCLibrary/ECCLibrary/ECCLibrary.csproj
+++ b/ECCLibrary/ECCLibrary/ECCLibrary.csproj
@@ -9,12 +9,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Reference Include="SMLHelper">
-			<HintPath>C:\Program Files (x86)\Steam\steamapps\common\Subnautica.stable\BepInEx\plugins\Modding Helper\SMLHelper.dll</HintPath>
-		</Reference>
-	</ItemGroup>
-
-	<ItemGroup>
 		<Using Remove="System" />
 		<Using Remove="System.Net.Http" />
 	</ItemGroup>
@@ -24,6 +18,12 @@
 		<PackageReference Include="Subnautica.GameLibs" Version="71137.0.0.1-r.0" />
 		<PackageReference Include="Unity.InputSystem" Version="1.5.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.36" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="SMLHelper">
+	    <HintPath>C:\Program Files (x86)\Steam\steamapps\common\Subnautica.stable\BepInEx\plugins\SMLib\SMLHelper.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
