--- a/ECCLibrary/ECCLibrary/ECCLibrary.csproj
+++ b/ECCLibrary/ECCLibrary/ECCLibrary.csproj
@@ -29,6 +29,6 @@
 		<PackageReference Include="Subnautica.GameLibs" Version="71288.0.0-r.0" />
 		<PackageReference Include="Unity.InputSystem" Version="1.5.0" />
 		<PackageReference Include="UnityEngine.Modules" Version="2019.4.36" />
-		<PackageReference Include="Subnautica.Nautilus" Version ="1.0.0-pre.9" />
+		<PackageReference Include="Subnautica.Nautilus" Version="1.*-*" PrivateAssets="all" />
 	</ItemGroup>
 </Project>
