Change publish branch to gh-pages

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -39,6 +39,7 @@ jobs:
       with:
         # Upload entire repository
         path: 'ECCLibrary/docfx_project/_site'
+        publish_branch: gh-pages
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
